tests/ui/parser/attribute/attr-dangling-in-mod.rs
fn main() {
}

#[foo = "bar"] //~ ERROR expected item after attributes

// ferrocene-annotations: fls_gvwd0kf72jt
// Attributes
